# ChangeLog for sys-fs/cachefilesd
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Aug 2009; A. Vinogradov <spamslepnoga@inbox.ru>
  +cachefilesd-0.9.ebuild, +files/cachefilesd.conf, +files/cachefilesd.init,
  +metadata.xml:
  initial commit
