@@ -1,7 +1,6 @@
 AUX cachefilesd.conf 228 RMD160 c9975dc842e75db716eae2f9b3bf22c6df4e8a5d SHA1 e52939661d9192008d866e4b5e9da1f8930eab53 SHA256 3553318406a02c8279fd1476d242d08fc347cadf0af7f9c100e945076504b3af
 AUX cachefilesd.init 503 RMD160 b218773e15f7a32f6b2611a18a9e272b8eea932d SHA1 db85cf03627cdb880b3a23a8243774defa8b34c5 SHA256 610ce0268be4e70554d6f3e380348e9cc08a8cb99aa37cec0dd76f5b6c7da6d8
-DIST FS-Cache.pdf 66167 RMD160 f16f51f8dc7d620f9e221261b70775832b3428a7 SHA1 7692f900aa6ee23a9aa24384c4afe686736c02d5 SHA256 e47a62dde3a19063217201f5e694f9f2d46e6771e0188e1777496ad1b513f0fd
 DIST cachefilesd-0.9.tar.bz2 20155 RMD160 e23fcd4c337819351f99bdc9ba524e34904503da SHA1 56d89b6415e0290888aa095866cf7c3f01a4665d SHA256 9996c3e624e0d022fc42e5013396d6fa300b47e60f94c0cc08038f0df2f33447
-EBUILD cachefilesd-0.9.ebuild 1357 RMD160 deedda20a50452b56bf34d467d7b2907e936006b SHA1 cf6fd38d90f797eb9e26c922cafde72e5ffc07c6 SHA256 2e15deceff03ddc3c061589a3b90ea2630b08c838c8262b4c37d8fbf5986defe
-MISC ChangeLog 284 RMD160 3bea2f43c6d1add59f23a4c6fd48323913fa305b SHA1 7810c3dff385ab4e67540b17160ac844a5b98a2f SHA256 39090b5d7c4e7ffec3db2a85a46f572da0963c622428c92e156d7f514fb6b877
+EBUILD cachefilesd-0.9-r1.ebuild 1128 RMD160 7fade54818da7738923d8091e5294c33a8e6e54b SHA1 b4ad8ac304ebefaf018e791897c45cfcf9fbc0cf SHA256 a89d4578c3bf57f2875e98432f8f853ed0c86433109e265c8cf5282d898b099a
+MISC ChangeLog 421 RMD160 2fc308fe9c0441527aa92284a848b8c8879a6982 SHA1 682c438544ef51b30cd11ffcc4a8902c6d9fbf0c SHA256 2404058d3bfb4ca863cb986ddb9a2a2d621d861620c585ba656943e12a51cc95
 MISC metadata.xml 383 RMD160 5413cc4dddf46b69003cbeea899245773180df63 SHA1 76be9a971d71d7895c3aead4eaff1bcc3b96ec5e SHA256 62f6e6c67dd187f09ac23a549d3914db97a8c2bd93f149dfcf31bd14cbcf305d
